@@ -14,6 +14,7 @@
 #include <qhbox.h>
 #include <qpushbutton.h>
 #include <qlabel.h>
+#include <qcheckbox.h>
 #include <kurlcompletion.h>
 #include <kurldrag.h>
 #include "threadweaver.h"
@@ -31,15 +32,15 @@ SearchBrowser::SearchBrowser( QWidget *parent, const char *name )
     QHBox *hb1 = new QHBox( this );
     hb1->setSpacing( 4 );
     hb1->setMargin( 2 );
-    QLabel *label1 = new QLabel( "Search for:", hb1 );
+    QLabel *label1 = new QLabel( "Search for", hb1 );
     searchEdit = new KLineEdit( hb1 );
-    QWidget *searchButton = new QPushButton( "&Search", hb1 );
     
     QHBox *hb2 = new QHBox( this );
     hb2->setSpacing( 4 );
     hb2->setMargin( 2 );
-    QLabel *label2 = new QLabel( "in:", hb2 );
+    QLabel *label2 = new QLabel( "in", hb2 );
     urlEdit = new KURLComboBox( KURLComboBox::Directories, TRUE, hb2 );
+    QWidget *searchButton = new QPushButton( "&Search", hb2 );
 
     KURLCompletion *cmpl = new KURLCompletion();
     urlEdit->setCompletionObject( cmpl );
