@@ -2,6 +2,7 @@ amaroK ChangeLog
 ================
 (c) 2002-2004 the amaroK authors.
 
+  ADD: Searching the Collection with a filter
   FIX: BrowserWin's QLabels are painted white in amaroK's own color scheme
 
 VERSION 1.0-beta1:
